avance delloltreall domingo

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html
 <html lang="es">
 <head>
 	<meta charset="UTF-8">
@@ -65,11 +65,11 @@
 		</section>
 	</section>
 	<nav>
-		<ul>
-			<li id="Personalizar">Personalizar</li>
-			<li id="Comprar">Comprar</li>
-			<li id="Contactar">Contactar</li>
-		</ul>
+      <ul>
+          <li><a id="personalizar" href="#">Personalizar</a></li>
+          <li><a id="comprar" href="#">Comprar</a></li>
+          <li><a id="contactar" href="#">Contactar</a></li>
+      </ul>
 	</nav>
 </body>
 </html>
